# SFML-test-repo

./: .gitignore  CMakeLists.txt  README.md  run.sh
src/: main.cpp
